welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:3: error: missing arguments for method min in class inOrder;
follow this method with `_' if you want to treat it as a partially applied function
		if ( min(a,c)=a && max(a,c)==c min(a,b)==a && min(b,c)==b){
                     ^