welcome.lessons.welcome.bat.bool2.InOrder.scala.code
def inOrder(a:Int, b:Int, c:Int, bOk:Boolean):Boolean = {
	if(!bOk){
		if ( min(a,c)=a && max(a,c)==c min(a,b)==a && min(b,c)==b){
		return true;
		}else{
			return false;
		}
	}else{
		if ( min(a,c)==a && min(b,c)==b){
		return true; 
		}else{
			return false;
		}
	}
}





def min (a:Int , b:Int): Int = {
	return   (  (a + b - Math.abs(b - a))/2);
}


def max (a:Int , b:Int): Int = {
	return   (  (a + b + Math.abs(b - a))/2);
}